--- a/src/global.scss
+++ b/src/global.scss
@@ -50,6 +50,9 @@ $font-family-wp-base: 'Gwen';
 
 ion-title {
     font-family: 'Gwen';
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 ion-card-title {
